<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20000000" >

    <LinearLayout
        android:id="@+id/ll_left_top"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/curriculumvitae_ll_bg"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备编码："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_selector"
                    android:text="扫描"
                    android:textSize="@dimen/textSize_36" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备名称："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling_person"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="生产厂家："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/construction_person"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备型号："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/construction_time"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备用途："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/construction_progress"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设备所有人："
                android:textColor="#000000"
                android:textSize="@dimen/textSize_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="张**"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_right"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/maintain_bt_openCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/bt_selector"
            android:onClick="toOpen"
            android:text="拍照"
            android:textSize="@dimen/textSize_40" />

        <Button
            android:id="@+id/maintain_bt_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/bt_selector"
            android:text="养护项"
            android:textSize="@dimen/textSize_40" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/bt_selector"
            android:text="上传"
            android:textSize="@dimen/textSize_40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom_right"
        android:layout_alignLeft="@id/ll_left_top"
        android:layout_below="@id/ll_left_top"
        android:layout_marginTop="15dp"
        android:background="@drawable/curriculumvitae_ll_bg"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="养护信息："
            android:textColor="#000000"
            android:textSize="@dimen/textSize_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/curriculumvitae_ll_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="正常施工"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="20"
                android:text="********************************************************************"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_36" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom_right"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/ll_left_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/ll_left_top" >

        <ImageView
            android:id="@+id/maintain_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>